--- a/package.json
+++ b/package.json
@@ -30,16 +30,25 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^12.0.0",
+    "@angular/cdk": "^12.1.0",
     "@angular/common": "^12.0.0",
     "@angular/compiler": "^12.0.0",
     "@angular/core": "^12.0.0",
     "@angular/forms": "^12.0.0",
+    "@angular/material": "^12.1.0",
     "@angular/platform-browser": "^12.0.0",
     "@angular/platform-browser-dynamic": "^12.0.0",
     "@angular/router": "^12.0.0",
+    "@ngrx/component-store": "^12.0.0",
+    "@ngrx/effects": "^12.0.0",
+    "@ngrx/entity": "^12.0.0",
+    "@ngrx/router-store": "^12.0.0",
+    "@ngrx/store": "^12.0.0",
     "@nrwl/angular": "12.5.0",
+    "add": "^2.0.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "xlsx": "^0.17.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -50,6 +59,8 @@
     "@angular/cli": "^12.0.0",
     "@angular/compiler-cli": "^12.0.0",
     "@angular/language-service": "^12.0.0",
+    "@ngrx/schematics": "^12.0.0",
+    "@ngrx/store-devtools": "^12.0.0",
     "@nrwl/cli": "12.5.0",
     "@nrwl/cypress": "12.5.0",
     "@nrwl/eslint-plugin-nx": "12.5.0",
