--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "@ngrx/store": "^12.0.0",
     "@nrwl/angular": "12.5.0",
     "add": "^2.0.6",
+    "exceljs": "^4.2.1",
+    "file-saver": "^2.0.5",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "xlsx": "^0.17.0",
@@ -68,6 +70,7 @@
     "@nrwl/linter": "12.5.0",
     "@nrwl/tao": "12.5.0",
     "@nrwl/workspace": "12.5.0",
+    "@types/file-saver": "^2.0.2",
     "@types/jest": "26.0.8",
     "@types/node": "14.14.33",
     "@typescript-eslint/eslint-plugin": "4.19.0",
